infra/k8s/saide/y-ws/y-ws-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: y-ws-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: y-ws
  template:
    metadata:
      labels:
        app: y-ws
    spec:
      containers:
        - name: y-ws
          image: tzuhsuanhuang/y-ws:latest
          ports:
            - containerPort: 80
