infra/k8s/saide/y-ws/y-ws-service.yml
apiVersion: v1
kind: Service
metadata:
  name: y-ws-service
spec:
  type: ClusterIP
  ports:
    - port: 13701
      targetPort: 80
  selector:
    app: y-ws
